--- a/hop_field.ipynb
+++ b/hop_field.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
     "for i in tqdm( range( iters ) ):\n",
     "    threshold[ i ] = ( low + high ) / 2\n",
     "    metric[ i ] = np.mean( np.where( patterns < threshold[ i ], -1, 1 ) )\n",
-    "    if metric[ i ] > -0.7: # 0.7 chosen by inspection\n",
+    "    if metric[ i ] > -0.7: # 0.7 chosen by inspection(not mine, credit to kaggle)\n",
     "        low = threshold[ i ]\n",
     "    else:\n",
     "        high = threshold[ i ]\n",
